# resolve-hosts

./: .gitignore  README.md  pyproject.toml  resolve_hosts.py  tox.ini
resolve_hosts/: cli.py
tests/: testnames.txt
